# slambook

./: .gitignore
ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  useHello.cpp
ch3/.kdev4/: ch3.kdev4
ch3/ex-7/: CMakeLists.txt  robot_1_and_2.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useEigen/.kdev4/: useEigen.kdev4
ch3/useGeometry/: CMakeLists.txt  extractBlock.cpp  useGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch5/camera_calibration/: CMakeLists.txt  VID5.xml  cameraCalib.cpp  cameraCalib.h  class_Settings.cpp  in_VID5.xml
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  test.cpp
ch5/joinMap/: CMakeLists.txt  joinMap.cpp  joinMap.sublime-project  joinMap.sublime-workspace
ch6/ceres_curve_fitting/: ceresFitting.cpp
ch6/g2o_curve_fitting/: CMakeLists.txt  g2oFitting.cpp
ch7/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp  vo1.h  vo1_funcs.cpp
ch8/directMethod/: CMakeLists.txt  direct_semidense.cpp  direct_sparse.cpp
project/0.1/include/myslam/: common_include.h  config.h  frame.h
project/0.2/: CMakeLists.txt
project/0.2/config/: default.yaml
project/0.2/include/myslam/: camera.h  common_include.h  map.h  mappoint.h  visual_odometry.h
project/0.2/src/: camera.cpp  config.cpp  frame.cpp  visual_odometry.cpp
project/0.2/test/: run_vo.cpp
project/0.3/: CMakeLists.txt
project/0.3/config/: default.yaml
project/0.3/include/myslam/: camera.h  common_include.h  frame.h  g2o_types.h  mappoint.h  visual_odometry.h
project/0.3/src/: camera.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
project/0.3/test/: run_vo.cpp
